<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DJ Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="mainMenuFile">文档</string>
    <string name="mainMenuSoft">应用</string>
    <string name="mainMenuMe">我</string>
    <string name="fileMenuRead">阅读</string>
    <string name="fileMenuNote">批注</string>
    <string name="fileMenuHand">手写</string>
    <string name="fileMenuSeal">盖章</string>

    <string name="countdown_text">跳过</string>

    <string name="updateInfo_url">http://192.168.1.13:8080/gongwen/updateXml/update.xml</string>
    <string name="update_title">版本更新</string>
    <string name="update_Positive">立即更新</string>
    <string name="update_Negative">狠心拒绝</string>
    <string name="updating">正在下载更新</string>
    <string name="update_faild">更新文件下载失败！</string>
    <string name="installed_error">apk安装失败</string>
    <string name="download_start">正在后台下载</string>
    <string name="download_finish">下载完成，点击安装</string>
    <string name="download_failed">下载失败</string>

    <!-- 我模块 -->
    <string name="me_menu_head">我</string>
    <string name="me_menu_userinfo">未注册</string>
    <string name="me_menu_mymodules">我购买的</string>
    <string name="me_menu_set">设置</string>
    <string name="me_menu_help">帮助</string>
    <string name="me_menu_about">关于</string>
    <string name="help_page_url">http://www.dianju.cn/</string>
    <string name="about_update_check">检查更新</string>
    <string name="about_new_version">发现新版本</string>
    <string name="about_update_content">更新日志</string>
    <string name="about_update_log">点击查看最新版本更新日志</string>
    <string name="about_version_name">当前版本号</string>
    <string name="version_name_error">当前版本获取失败</string>
    <string name="copyright_info">版权所有 2015 北京点聚信息技术有限公司     京ICP备13034857号\nwww.dianju.cn</string>

    <!-- 通知栏 -->
    <string name="notification_title">点聚阅读器</string>
    <string name="notification_text">下载中…</string>
    <string name="notification_ticker">正在更新…</string>
    <string name="notification_finish">更新完成！</string>
    <string name="channel_name">download</string>
    <string name="channel_description">download_update</string>

    <!--登录-->
    <string name="mobile_login">手机快捷登录</string>
    <string name="login_button">登录</string>
    <string name="username_mobile">手机号码</string>
    <string name="dynamic_pwd">动态密码</string>
    <string name="get_dyc_pwd">获取动态密码</string>
    <string name="login_view_url">http://192.168.1.81:8080/PDFReaderServer/</string>

    <!-- 提示 -->
    <string name="storage_decline">您拒绝了存储权限，无法使用读取与写入的相关功能！</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_default_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="no_read">最近还没有阅读过文件！</string>
</resources>
