<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/title_about"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:background="@color/menu_head_background_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" >
        </ImageView>

        <TextView
            android:id="@+id/help_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_menu_about"
            android:textSize="@dimen/title_text_size" />
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/versionUpdate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_item_height"
        android:paddingLeft="@dimen/me_menu_paddingHorizontal"
        android:paddingRight="@dimen/me_menu_paddingHorizontal"
        android:layout_below="@id/title_about" >

        <TextView
            android:id="@+id/update_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_item_size"
            android:text="@string/about_update_check"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/new_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/about_new_version"
            android:textColor="@color/new_version"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/new_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/update_check"
            android:layout_toEndOf="@+id/update_check"
            android:layout_marginLeft="@dimen/new_msg_left"
            android:src="@drawable/red_point"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/lit_parting_line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_menu_litpartingline_height"
        android:background="@color/litttle_parting_color"
        android:layout_below="@+id/versionUpdate"/>

    <LinearLayout
        android:id="@+id/updateContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_item_height"
        android:paddingLeft="@dimen/menu_head_left"
        android:gravity="center_vertical"
        android:layout_below="@+id/versionUpdate"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_update_content"
            android:textSize="@dimen/about_item_size" />

        <TextView
            android:id="@+id/update_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_update_log"
            android:textColor="@color/background_text_color" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/lit_parting_line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_menu_litpartingline_height"
        android:background="@color/litttle_parting_color"
        android:layout_below="@+id/updateContent"/>

    <LinearLayout
        android:id="@+id/versionInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_item_height"
        android:paddingLeft="@dimen/menu_head_left"
        android:gravity="center_vertical"
        android:layout_below="@+id/updateContent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version_name"
            android:textSize="@dimen/about_item_size" />

        <TextView
            android:id="@+id/versionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/background_text_color" />

    </LinearLayout>
    <TextView
        android:id="@+id/lit_parting_line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_menu_litpartingline_height"
        android:background="@color/litttle_parting_color"
        android:layout_below="@+id/versionInfo"/>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/copyright_bottom"
        android:gravity="center_horizontal"
        android:textColor="@color/background_text_color"
        android:text="@string/copyright_info" />

</RelativeLayout>